--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,13 +1,14 @@
-.both {
+.first,
+.second {
     font-size: 28px;
     font-family: Times New Roman, Helvetica, sans-serif;
 }
 
-#first {
+.first {
     background-color: black;
     color: white;
 }
 
-#second {
+.second {
     background-color: yellow;
 }
